# markerDetector

./: .gdbinit  .gitignore  CMakeLists.txt
config/: complete.cfg
generator/: LaTeX_printer.py  Target.py  generator.py
generator/targets/: target_01.tex  target_02.tex  target_03.tex  target_04.tex  target_05.tex  target_06.tex  target_07.tex  target_08.tex  target_09.tex  target_10.tex  target_11.tex  target_12.tex  target_13.tex  target_14.tex  target_15.tex  target_16.tex  target_17.tex  target_18.tex  target_19.tex  target_20.tex  target_21.tex  target_22.tex  target_23.tex  target_24.tex  target_25.tex  target_26.tex  target_27.tex  target_28.tex  target_29.tex  target_30.tex  target_31.tex  target_32.tex  target_33.tex  target_34.tex  target_35.tex
include/: MarkerDetector.h  MarkerDetectorConfig.h  SignalReader.h  Structures.h  Target.h  markerDetector.h
src/: MarkerDetector.cpp  MarkerDetectorConfig.cpp  SignalReader.cpp  detect.cpp  markerDetector.cpp
